# drake

./: .gitignore
.binder/: Dockerfile
bindings/pydrake/examples/: examples_py_manipulation_station.cc  examples_py_rl_cito_station.cc
bindings/pydrake/examples/gym/: BUILD.bazel  scenario_helpers.py
bindings/pydrake/examples/gym/envs/box_flipup/: box_flipup.py
bindings/pydrake/examples/gym/models/: BUILD.bazel  planar_bin.sdf
bindings/pydrake/gym/: BUILD.bazel  drake_gym.py
bindings/pydrake/gym/test/: drake_gyn_test.py
bindings/pydrake/manipulation/: simple_ui.py
bindings/pydrake/multibody/: plant_py.cc  tree_py.cc
bindings/pydrake/multibody/test/: plant_test.py
bindings/pydrake/solvers/: BUILD.bazel
bindings/pydrake/systems/: controllers_py.cc
drake_gym/: BUILD.bazel  drake_gym.py  rl_collect_data_rl_cito_station_pushing_box_v2.py  rl_play_cart_pole.py  rl_play_humanoid_fbase_standup_pid.py  rl_play_noodlemanstandup.py  rl_play_punyoid_lifting_box.py  rl_play_rl_cito_station_pushing_box.py  rl_play_rl_cito_station_pushing_box_v2.py  rl_train_boxflipup.py  rl_train_humanoid_fbase_standup_pid.py  rl_train_noodlemanstandup.py  rl_train_punyoid_lifting_box.py  rl_train_rl_cito_station_pushing_box.py  rl_train_rl_cito_station_pushing_box_v2.py  rl_wandb_train_cart_pole.py  rl_wandb_train_rl_cito_station_pushing_box.py  test_gym.py  utils.py
drake_gym/envs/: BUILD.bazel  box_flipup.py  cart_pole.py  humanoid_fbase_standup_pid.py  iiwa_pushing_box.py  noodleman_standup.py  punyoid_lifting_box.py  rl_cito_station_pushing_box.py  rl_cito_station_pushing_box_v2.py
drake_gym/models/: cartpole_BSA.sdf  cross_prismatic_2D.sdf  floor_v2.sdf  humanoid_torso_v2_noball_noZeroBodies_spring_prismatic.sdf  humanoid_v2_noball.sdf  noodleman_v1.sdf  optitrack_brick.sdf
examples/atlas/: atlas_run_dynamics.cc
examples/hydroelastic/spatula_slip_control/: spatula_slip_control.cc
examples/manipulation_station/: joint_teleop.py  manipulation_station.h
examples/rl_cito_station/: BUILD.bazel  differential_ik.py  end_effector_teleop_sliders.py  mock_station_simulation.cc  rl_cito_station.cc  rl_cito_station_hardware_interface.cc  rl_cito_station_hardware_interface.h  trajectory_execution.py  trajectory_execution_cartesian.py  trajectory_planner.py
examples/rl_cito_station/models/: custom_box.sdf  floor.sdf  optitrack_brick_v2.sdf
examples/ruxid/cart_pole/: BUILD.bazel  cart_pole.py
examples/ruxid/python_humanoid_pid/: humanoid_sim_demo_pid.py
examples/ruxid/python_humanoid_sim/: BUILD.bazel  humanoid_sim_demo_inv_dynamics_control.py
examples/ruxid/python_humanoid_sim/models/: humanoid_v1.sdf
examples/ruxid/python_humanoid_torso_idc_box/: humanoid_torso_idc_box.py
examples/ruxid/python_humanoid_torso_idc_box_lcm/: BUILD.bazel  humanoid_torso_idc_box_lcm.py  mediapipe_test_video.py  openpose_test.py
examples/ruxid/python_humanoid_torso_idc_box_lcm/models/: floor.sdf
examples/ruxid/python_noodleman_chair/: BUILD.bazel  noodleman_sim_demo.py
examples/ruxid/python_noodleman_chair/models/: chair_v1.sdf  noodleman.sdf
examples/ruxid/python_noodleman_chair_inv_dynamics_control/: BUILD.bazel  noodleman_sim_demo_inv_dynamics_control.py
examples/ruxid/python_noodleman_chair_value_iteration/: noodleman_sim_demo_value_iteration.py
geometry/: meshcat.cc  meshcat_types.h
manipulation/models/iiwa_description/sdf/: iiwa14_box_and_EE_polytope_collision.sdf
manipulation/util/: show_model.py
multibody/plant/: BUILD.bazel  compliant_contact_manager.cc
tools/install/libdrake/: build_components.bzl
tutorials/: BUILD.bazel  Model_inspector.ipynb
