# -*- mode: python -*-
# vi: set ft=python :

load("//tools/skylark:drake_py.bzl", "drake_py_binary","drake_py_library")
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_python_library(
    name = "box_flipup",
    srcs = ["box_flipup.py"],
    data = [
      "models",
    ],
    imports = [".."],
    visibility = ["//visibility:public"],
    deps = [
      "//drake_gym",
      "//scenarios",
    ]
)
drake_python_library(
    name = "pendulum",
    srcs = ["pendulum.py"],
    imports = [".."],
    visibility = ["//visibility:public"],
    deps = [
      "drake_gym_py",
      "scenarios_py",
      "//bindings/pydrake",
    ]
)
drake_python_library(
    name = "noodleman_standup",
    srcs = ["noodleman_standup.py"],
    data = [
      "models",
    ],
    imports = [".."],
    visibility = ["//visibility:public"],
    deps = [
      "//drake_gym",
      "//scenarios",
    ]
)