# -*- mode: python -*-
# vi: set ft=python :

load("//tools/lint:lint.bzl", "add_lint_tests")
load("//tools/skylark:py.bzl", "py_library", "py_test")

py_library(
    name = "drake_gym",
    srcs = ["drake_gym.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@drake//bindings/pydrake",
        # "@gym_py",
    ],
)

py_test(
    name = "drake_gym_test",
    srcs = ["test/drake_gym_test.py"],
    # cuda_size = "small",
    deps = [
        ":drake_gym",
        "//bindings/pydrake/examples/gym:box_flipup",
        "@stable_baselines3_internal//:stable_baselines3",
        # "@pytorch",  # Undeclared dependency of stable_baselines3
    ],
)

add_lint_tests()